--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
     }
   </script>
 
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=TA_CLE_API&libraries=places&callback=initMap">
-  </script>
+<script async
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZH4L5BHKTJjZki3fv9aJkHodkSHxiejY&libraries=places&callback=initMap">
+</script>
 </body>
 </html>
