--- a/index.html
+++ b/index.html
@@ -8,146 +8,52 @@
   <meta name="description" content="OuassVTC - Chauffeur VTC privé à Perpignan et alentours. Réservation rapide, estimation instantanée, confort et sécurité garantis.">
   <meta name="keywords" content="VTC Perpignan, Taxi Perpignan, chauffeur privé, Uber Perpignan, Bolt, Heetch, Allocab, transport aéroport, transport gare, Saint-Estève, Canet-en-Roussillon, Cabestany, Rivesaltes, Argelès-sur-Mer, Le Barcarès, Leucate, Torreilles, Saint-Cyprien, Espagne, Gérone, Figueras, Costa Brava">
 
+  <!-- ✅ Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX'); // Remplace par ton ID GA4
+
+    // ✅ Fonction pour suivre les clics
+    function trackEvent(action, label) {
+      gtag('event', action, {
+        'event_category': 'Interaction',
+        'event_label': label
+      });
+    }
+  </script>
+
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-      margin: 0; padding: 0;
-      background: #fff; color: #222;
-    }
-    header, footer {
-      background: #000; color: #fff;
-      text-align: center; padding: 15px;
-    }
+    body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;margin: 0; padding: 0;background: #fff; color: #222;}
+    header, footer {background: #000; color: #fff;text-align: center; padding: 15px;}
     header img { max-height: 70px; }
-
-    nav {
-      background: #f7f7f7;
-      display: flex; justify-content: center;
-      gap: 15px; padding: 10px 0;
-      border-bottom: 1px solid #eee;
-    }
-    nav a {
-      color: #333; text-decoration: none;
-      font-size: 15px; font-weight: 500;
-    }
+    nav {background: #f7f7f7;display: flex; justify-content: center;gap: 15px; padding: 10px 0;border-bottom: 1px solid #eee;}
+    nav a {color: #333; text-decoration: none;font-size: 15px; font-weight: 500;}
     nav a:hover { color: #000; text-decoration: underline; }
-
-    .container {
-      max-width: 480px; margin: auto;
-      padding: 20px;
-    }
-    .hero-text {
-      text-align: center; margin: 15px 0 25px;
-    }
-    .hero-text h2 {
-      font-size: 24px; font-weight: 600;
-      margin-bottom: 5px;
-    }
-    .hero-text p {
-      font-size: 15px; color: #666;
-    }
-
-    .buttons {
-      display: flex; justify-content: center;
-      gap: 10px; margin-bottom: 20px; flex-wrap: wrap;
-    }
-    .buttons a {
-      display: inline-block;
-      background: #000; color: #fff;
-      padding: 12px 20px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-size: 14px; font-weight: 500;
-      transition: 0.2s;
-    }
+    .container {max-width: 480px; margin: auto;padding: 20px;}
+    .hero-text {text-align: center; margin: 15px 0 25px;}
+    .hero-text h2 {font-size: 24px; font-weight: 600;margin-bottom: 5px;}
+    .hero-text p {font-size: 15px; color: #666;}
+    .buttons {display: flex; justify-content: center;gap: 10px; margin-bottom: 20px; flex-wrap: wrap;}
+    .buttons a {display: inline-block;background: #000; color: #fff;padding: 12px 20px;border-radius: 30px;text-decoration: none;font-size: 14px; font-weight: 500;transition: 0.2s;}
     .buttons a:hover { opacity: 0.85; }
-
-    .form-section {
-      background: #fff; padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    }
-
-    input, select, textarea {
-      width: 100%;
-      padding: 14px;
-      margin: 8px 0 12px;
-      border: 1px solid #e5e5e5;
-      border-radius: 10px;
-      background: #f9f9f9;
-      font-size: 16px;
-    }
-    input:focus, select:focus, textarea:focus {
-      outline: none;
-      border: 1px solid #000;
-      background: #fff;
-    }
+    .form-section {background: #fff; padding: 20px;border-radius: 12px;box-shadow: 0 4px 10px rgba(0,0,0,0.05);}
+    input, select, textarea {width: 100%;padding: 14px;margin: 8px 0 12px;border: 1px solid #e5e5e5;border-radius: 10px;background: #f9f9f9;font-size: 16px;}
+    input:focus, select:focus, textarea:focus {outline: none;border: 1px solid #000;background: #fff;}
     textarea { min-height: 60px; resize: none; }
-
-    label {
-      display: block;
-      font-size: 14px;
-      font-weight: 500;
-      color: #555;
-      margin-bottom: 4px;
-      margin-top: 10px;
-    }
-
-    button {
-      width: 100%;
-      padding: 16px;
-      font-size: 16px;
-      font-weight: 600;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: 0.2s ease-in-out;
-    }
-    button.green {
-      background: #000; color: #fff;
-      margin-bottom: 10px;
-    }
-    button.black {
-      background: #000; color: #fff;
-    }
+    label {display: block;font-size: 14px;font-weight: 500;color: #555;margin-bottom: 4px;margin-top: 10px;}
+    button {width: 100%;padding: 16px;font-size: 16px;font-weight: 600;border: none;border-radius: 30px;cursor: pointer;transition: 0.2s ease-in-out;}
+    button.green {background: #000; color: #fff;margin-bottom: 10px;}
+    button.black {background: #000; color: #fff;}
     button:hover { opacity: 0.9; }
-
-    .confirmation {
-      text-align: center;
-      margin-top: 8px;
-      color: #06c167;
-      font-weight: 600;
-      font-size: 14px;
-    }
-
-    .contact-section {
-      margin-top: 40px;
-      padding: 20px;
-      background: #f9f9f9;
-      border-radius: 12px;
-      text-align: center;
-      font-size: 15px;
-      color: #444;
-    }
-    .contact-section p {
-      margin: 6px 0;
-    }
-
+    .confirmation {text-align: center;margin-top: 8px;color: #06c167;font-weight: 600;font-size: 14px;}
+    .contact-section {margin-top: 40px;padding: 20px;background: #f9f9f9;border-radius: 12px;text-align: center;font-size: 15px;color: #444;}
+    .contact-section p {margin: 6px 0;}
     footer { font-size: 13px; }
-
-    #map {
-      height: 300px;
-      width: 100%;
-      margin-top: 10px;
-      border-radius: 12px;
-    }
-
-    @media (max-width: 600px) {
-      nav { flex-wrap: wrap; }
-      .container { padding: 15px; }
-      .hero-text h2 { font-size: 22px; }
-      .buttons a { font-size: 13px; padding: 10px 18px; }
-    }
+    #map {height: 300px;width: 100%;margin-top: 10px;border-radius: 12px;}
+    @media (max-width: 600px) {.container { padding: 15px; } .hero-text h2 { font-size: 22px; } .buttons a { font-size: 13px; padding: 10px 18px; }}
   </style>
 </head>
 <body>
@@ -170,9 +76,9 @@
     </div>
 
     <div class="buttons">
-      <a href="tel:0644120784">📞 Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank">💬 WhatsApp</a>
-      <a href="sms:+33644120784">✉️ SMS</a>
+      <a href="tel:0644120784" onclick="trackEvent('clic_appel', 'Bouton Appeler')">📞 Appeler</a>
+      <a href="https://wa.me/33644120784" target="_blank" onclick="trackEvent('clic_whatsapp', 'Bouton WhatsApp')">💬 WhatsApp</a>
+      <a href="sms:+33644120784" onclick="trackEvent('clic_sms', 'Bouton SMS')">✉️ SMS</a>
     </div>
 
     <div class="form-section">
@@ -223,6 +129,13 @@
     function sendEmail(event){
       event.preventDefault();
       if(formEnvoye)return alert("Votre demande a déjà été envoyée.");
+
+      // ✅ Tracking Google Analytics pour la réservation
+      gtag('event', 'reservation_envoyee', {
+        'event_category': 'Formulaire',
+        'event_label': 'Demande de réservation'
+      });
+
       const params={
         nom:nom.value,
         telephone:telephone.value,
@@ -267,6 +180,9 @@
       const d = depart.value, a = arrivee.value;
       if(!d||!a)return alert("Veuillez entrer les adresses");
 
+      // ✅ Tracking Google Analytics
+      trackEvent('clic_estimation', 'Bouton Estimer le tarif');
+
       directionsService.route({
         origin: d,
         destination: a,
@@ -286,8 +202,8 @@
     }
   </script>
 
-<script async
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZH4L5BHKTJjZki3fv9aJkHodkSHxiejY&libraries=places&callback=initMap">
-</script>
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZH4L5BHKTJjZki3fv9aJkHodkSHxiejY&libraries=places&callback=initMap">
+  </script>
 </body>
 </html>
