--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   </script>
 
   <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZH4L5BHKTJjZki3fv9aJkHodkSHxiejY&libraries=places&callback=initMap">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxEs2za_iEs5okAbU3H9fvJm0sRm0oG-A&callback=initMap" async defer></script>
   </script>
 </body>
 </html>
