--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OuassVTC - Chauffeur VTC à Perpignan</title>
 
   <meta name="description" content="OuassVTC - Chauffeur VTC privé à Perpignan et alentours. Réservation rapide, estimation instantanée, confort et sécurité garantis.">
@@ -15,68 +15,68 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-23LLHRH2QL');
-
     function trackEvent(action, label) {
-      gtag('event', action, {
-        'event_category': 'Interaction',
-        'event_label': label
-      });
+      gtag('event', action, { event_category: 'Interaction', event_label: label });
     }
   </script>
 
   <style>
-    body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;margin: 0; padding: 0;background: #fff; color: #222;}
-    header, footer {background: #000; color: #fff;text-align: center; padding: 15px;}
-    header img { max-height: 70px; }
-    nav {background: #f7f7f7;display: flex; justify-content: center;gap: 15px; padding: 10px 0;border-bottom: 1px solid #eee;}
-    nav a {color: #333; text-decoration: none;font-size: 15px; font-weight: 500;}
-    nav a:hover { color: #000; text-decoration: underline; }
-    .container {max-width: 500px; margin: auto;padding: 20px;}
-    .hero-text {text-align: center; margin: 15px 0 25px;}
-    .hero-text h2 {font-size: 24px; font-weight: 600;margin-bottom: 5px;}
-    .hero-text p {font-size: 15px; color: #666;}
-    .buttons {display: flex; justify-content: center;gap: 10px; margin-bottom: 20px; flex-wrap: wrap;}
-    .buttons a {display: inline-block;background: #000; color: #fff;padding: 12px 20px;border-radius: 30px;text-decoration: none;font-size: 14px; font-weight: 500;transition: 0.2s;}
-    .buttons a:hover { opacity: 0.85; }
-    .form-section {background: #fff; padding: 20px;border-radius: 12px;box-shadow: 0 4px 10px rgba(0,0,0,0.05);}
-    input, select, textarea {width: 100%;padding: 14px;margin: 8px 0 12px;border: 1px solid #e5e5e5;border-radius: 10px;background: #f9f9f9;font-size: 16px;}
-    input:focus, select:focus, textarea:focus {outline: none;border: 1px solid #000;background: #fff;}
-    textarea { min-height: 60px; resize: none; }
-    label {display: block;font-size: 14px;font-weight: 500;color: #555;margin-bottom: 4px;margin-top: 10px;}
-    button {width: 100%;padding: 16px;font-size: 16px;font-weight: 600;border: none;border-radius: 30px;cursor: pointer;transition: 0.2s ease-in-out;}
-    button.green {background: #000; color: #fff;margin-bottom: 10px;}
-    button.black {background: #000; color: #fff;}
-    button:hover { opacity: 0.9; }
-    .tarif-box {
-      text-align: center;
-      margin-top: 20px;
-      padding: 20px;
-      background: #f9f9f9;
-      border-radius: 12px;
-      border: 2px solid #000;
+    :root{--border:#e5e7eb;--muted:#6b7280}
+    *{box-sizing:border-box}
+    body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:#fff;color:#111}
+    header,footer{background:#000;color:#fff;text-align:center;padding:16px}
+    header img{max-height:64px}
+    nav{display:flex;gap:16px;justify-content:center;border-bottom:1px solid var(--border);padding:10px}
+    nav a{color:#333;text-decoration:none;font-weight:600} nav a:hover{text-decoration:underline}
+
+    .container{max-width:560px;margin:auto;padding:20px}
+    .hero-text{text-align:center;margin:10px 0 18px}
+    .hero-text h2{margin:0 0 6px;font-size:26px}
+    .hero-text p{margin:0;color:var(--muted)}
+    .buttons{display:flex;flex-wrap:wrap;gap:10px;justify-content:center;margin:18px 0}
+    .btn{appearance:none;border:0;border-radius:999px;padding:12px 18px;background:#000;color:#fff;text-decoration:none;font-weight:700;cursor:pointer}
+    .btn:hover{opacity:.9}
+
+    .form-section{background:#fff;border:1px solid var(--border);border-radius:16px;padding:16px;box-shadow:0 6px 24px rgba(0,0,0,.06)}
+    label{display:block;font-size:14px;font-weight:600;margin:8px 0 6px}
+    input,select,textarea{width:100%;padding:14px 12px;border:1px solid var(--border);border-radius:12px;background:#f8fafc;font-size:16px}
+    textarea{min-height:64px;resize:none}
+    input:focus,select:focus,textarea:focus{outline:none;border-color:#000;background:#fff}
+
+    /* === Uber-like sticky fare banner === */
+    .fare-sticky{
+      position:sticky; top:8px; z-index:5;
+      background:#0a0a0a; color:#fff; border-radius:14px;
+      padding:14px 16px; margin:10px 0 12px; display:none;
+      border:1px solid rgba(255,255,255,.08);
+      box-shadow:0 12px 30px rgba(0,0,0,.25);
     }
-    .tarif-box .prix {
-      font-size: 32px;
-      font-weight: 700;
-      color: #000;
-      margin-bottom: 5px;
-    }
-    .tarif-box .details {
-      font-size: 15px;
-      color: #555;
-    }
-    .contact-section {margin-top: 40px;padding: 20px;background: #f9f9f9;border-radius: 12px;text-align: center;font-size: 15px;color: #444;}
-    .contact-section p {margin: 6px 0;}
-    footer { font-size: 13px; }
-    #map {height: 300px;width: 100%;margin-top: 10px;border-radius: 12px;}
-    @media (max-width: 600px) {.container { padding: 15px; } .hero-text h2 { font-size: 22px; } .buttons a { font-size: 13px; padding: 10px 18px; } .tarif-box .prix { font-size: 26px; }}
+    .fare-row{display:flex;align-items:center;justify-content:space-between;gap:14px}
+    .fare-left{display:flex;align-items:center;gap:10px}
+    .badge{font-size:12px;font-weight:800;letter-spacing:.02em;color:#0a0a0a;background:#fff;border-radius:999px;padding:4px 10px}
+    .fare-price{font-size:34px;font-weight:900;line-height:1}
+    .fare-meta{font-size:13px;color:#d1d5db;margin-top:4px}
+    .chip{font-size:12px;border:1px solid rgba(255,255,255,.15);padding:6px 10px;border-radius:999px}
+    .accent{color:#86efac;border-color:#22c55e}
+
+    #map{height:320px;border-radius:14px;overflow:hidden;margin-top:10px}
+
+    /* Animations */
+    @keyframes fadeUp{from{opacity:0;transform:translateY(6px)}to{opacity:1;transform:none}}
+    @keyframes pop{0%{transform:scale(.96)}60%{transform:scale(1.05)}100%{transform:scale(1)}}
+    .show{display:block;animation:fadeUp .35s ease-out}
+    .pop{animation:pop .38s ease-out}
+
+    .contact-section{margin-top:28px;text-align:center;color:#555}
+    .contact-section a{color:#000;text-decoration:none}
+    footer{font-size:13px}
+
+    @media (max-width:560px){.fare-price{font-size:28px}.container{padding:16px}}
   </style>
 </head>
 <body>
 
-  <header>
-    <img src="ouassvtc.png" alt="Logo OuassVTC">
-  </header>
+  <header><img src="ouassvtc.png" alt="Logo OuassVTC"></header>
 
   <nav>
     <a href="services.html">Services</a>
@@ -92,55 +92,71 @@
     </div>
 
     <div class="buttons">
-      <a href="tel:0644120784" onclick="trackEvent('clic_appel', 'Bouton Appeler')">📞 Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank" onclick="trackEvent('clic_whatsapp', 'Bouton WhatsApp')">💬 WhatsApp</a>
-      <a href="sms:+33644120784" onclick="trackEvent('clic_sms', 'Bouton SMS')">✉️ SMS</a>
+      <a class="btn" href="tel:0644120784" onclick="trackEvent('clic_appel','Appeler')">📞 Appeler</a>
+      <a class="btn" href="https://wa.me/33644120784" target="_blank" onclick="trackEvent('clic_whatsapp','WhatsApp')">💬 WhatsApp</a>
+      <a class="btn" href="sms:+33644120784" onclick="trackEvent('clic_sms','SMS')">✉️ SMS</a>
     </div>
 
     <div class="form-section">
-      <form onsubmit="sendEmail(event)">
-        <input type="text" id="nom" placeholder="Nom et prénom" required>
-        <input type="tel" id="telephone" placeholder="Téléphone" required>
-        <input type="text" id="depart" placeholder="Adresse de départ" required>
-        <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required>
+      <!-- ⭐️ Bannière tarif façon Uber -->
+      <div id="fare" class="fare-sticky">
+        <div class="fare-row">
+          <div class="fare-left">
+            <span class="badge">Estimation</span>
+            <div>
+              <div class="fare-price" id="prixAffiche">-- €</div>
+              <div class="fare-meta" id="detailsTrajet">Distance : -- km · Temps : --</div>
+            </div>
+          </div>
+          <div class="chip accent">Tarif indicatif</div>
+        </div>
+      </div>
 
-        <label for="dateheure">📅 Date et heure de la réservation :</label>
+      <form onsubmit="sendEmail(event)">
+        <label for="nom">Nom et prénom</label>
+        <input type="text" id="nom" placeholder="Ex. Dupont Pierre" required>
+
+        <label for="telephone">Téléphone</label>
+        <input type="tel" id="telephone" placeholder="06 xx xx xx xx" required>
+
+        <label for="depart">Adresse de départ</label>
+        <input type="text" id="depart" placeholder="Saisissez l'adresse de départ" required>
+
+        <label for="arrivee">Adresse d'arrivée</label>
+        <input type="text" id="arrivee" placeholder="Saisissez l'adresse d'arrivée" required>
+
+        <label for="dateheure">📅 Date et heure</label>
         <input type="datetime-local" id="dateheure" required>
 
+        <label for="passagers">Nombre de passagers</label>
         <select id="passagers" required>
-          <option value="">Nombre de passagers</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
+          <option value="">Sélectionner</option>
+          <option>1</option><option>2</option><option>3</option><option>4</option>
         </select>
 
+        <label for="paiement">Mode de paiement</label>
         <select id="paiement" required>
-          <option value="">Mode de paiement</option>
+          <option value="">Sélectionner</option>
           <option value="Lien de paiement sécurisé">Lien sécurisé (CB)</option>
           <option value="Paiement CB à bord">CB à bord</option>
           <option value="Paiement espèces à bord">Espèces à bord</option>
         </select>
 
-        <textarea id="message" placeholder="Informations complémentaires"></textarea>
-        <button type="button" class="green" onclick="calculerEstimation()">📏 Estimer le tarif</button>
-        <button type="submit" class="black">✅ Envoyer la demande</button>
+        <label for="message">Informations complémentaires</label>
+        <textarea id="message" placeholder="Code porte, bagages, enfant, etc."></textarea>
+
+        <button type="button" class="btn" onclick="calculerEstimation()">📏 Estimer le tarif</button>
+        <button type="submit" class="btn">✅ Envoyer la demande</button>
       </form>
 
       <div id="map"></div>
-
-      <!-- 💰 Tarif affiché ici -->
-      <div id="tarifBox" class="tarif-box" style="display:none;">
-        <div class="prix" id="prixAffiche">-- €</div>
-        <div class="details" id="detailsTrajet">Distance : -- km | Temps : --</div>
-      </div>
     </div>
 
     <div class="contact-section">
-      <h3>Contact direct</h3>
-      <p>📞 Téléphone : <a href="tel:0644120784" style="color:#000;text-decoration:none;">06 44 12 07 84</a></p>
-      <p>💬 WhatsApp : <a href="https://wa.me/33644120784" style="color:#000;text-decoration:none;">Envoyer un message</a></p>
-      <p>✉️ Email : <a href="mailto:contact@ouassvtc.fr" style="color:#000;text-decoration:none;">contact@ouassvtc.fr</a></p>
+      <h3 style="margin:0 0 6px">Contact direct</h3>
+      <p style="margin:4px 0">📞 <a href="tel:0644120784">06 44 12 07 84</a></p>
+      <p style="margin:4px 0">💬 <a href="https://wa.me/33644120784">WhatsApp</a></p>
+      <p style="margin:4px 0">✉️ <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a></p>
     </div>
   </div>
 
@@ -150,83 +166,93 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     emailjs.init("U08QGWWRUenJDOllc");
-    let formEnvoye = false;
+    let formEnvoye=false;
 
-    function sendEmail(event){
-      event.preventDefault();
+    function sendEmail(e){
+      e.preventDefault();
       if(formEnvoye) return alert("Votre demande a déjà été envoyée.");
 
-      const params = {
-        nom: nom.value,
-        telephone: telephone.value,
-        depart: depart.value,
-        arrivee: arrivee.value,
-        dateheure: dateheure.value,
-        passagers: passagers.value,
-        paiement: paiement.value,
-        message: message.value,
-        prix: document.getElementById("prixAffiche").innerText
+      const params={
+        nom:nom.value,
+        telephone:telephone.value,
+        depart:depart.value,
+        arrivee:arrivee.value,
+        dateheure:dateheure.value,
+        passagers:passagers.value,
+        paiement:paiement.value,
+        message:message.value,
+        prix:document.getElementById("prixAffiche").textContent
       };
 
       emailjs.send("service_kdvgh9f","template_5xt5vlv",params)
-        .then(() => {
-          formEnvoye = true;
-          document.querySelector(".form-section").innerHTML = `
-            <div style="text-align:center;padding:40px 20px;">
-              <h2 style="color:#000;font-size:24px;">✅ Demande envoyée</h2>
-              <p style="margin-top:10px;font-size:16px;">Nous vous confirmons rapidement votre course.</p>
-              <button onclick="window.location.reload()" style="margin-top:25px;padding:14px 24px;background:#000;color:#fff;border:none;border-radius:30px;font-size:15px;cursor:pointer;">
-                ➕ Nouvelle réservation
-              </button>
-            </div>`;
-        }).catch(() => alert("❌ Une erreur est survenue. Réessayez."));
+        .then(()=>{ formEnvoye=true; alert("✅ Demande envoyée. Nous revenons vers vous rapidement."); })
+        .catch(()=> alert("❌ Erreur d’envoi. Réessayez."));
     }
 
     // ✅ Google Maps avec autocomplétion et estimation
     let map, directionsService, directionsRenderer;
     function initMap(){
       map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 7,
-        center: { lat: 42.6887, lng: 2.8948 } // Perpignan
+        zoom: 7, center: { lat: 42.6887, lng: 2.8948 } // Perpignan
       });
       directionsService = new google.maps.DirectionsService();
-      directionsRenderer = new google.maps.DirectionsRenderer();
-      directionsRenderer.setMap(map);
+      directionsRenderer = new google.maps.DirectionsRenderer({ map });
 
+      // Autocomplete (classique) — nécessite libraries=places
       new google.maps.places.Autocomplete(document.getElementById("depart"));
       new google.maps.places.Autocomplete(document.getElementById("arrivee"));
+    }
+
+    // Anim prix + affichage sticky
+    function animatePrice(el,target){
+      const startTime=performance.now(), dur=600;
+      (function step(now){
+        const p=Math.min((now-startTime)/dur,1);
+        el.textContent=(target*p).toFixed(2)+" €";
+        if(p<1) requestAnimationFrame(step);
+      })(startTime);
+    }
+    function showFare(prix, distKm, duree){
+      const wrap=document.getElementById("fare");
+      const priceEl=document.getElementById("prixAffiche");
+      const detEl=document.getElementById("detailsTrajet");
+      animatePrice(priceEl, prix);
+      priceEl.classList.remove("pop"); void priceEl.offsetWidth; priceEl.classList.add("pop");
+      detEl.textContent=`Distance : ${distKm.toFixed(1)} km · Temps : ${duree}`;
+      wrap.classList.add("show");
     }
 
     function calculerEstimation(){
       const d = depart.value, a = arrivee.value;
       if(!d || !a) return alert("Veuillez entrer les adresses");
 
-      trackEvent('clic_estimation', 'Bouton Estimer le tarif');
+      trackEvent('clic_estimation','Estimation');
 
       directionsService.route({
-        origin: d,
-        destination: a,
-        travelMode: google.maps.TravelMode.DRIVING
+        origin: d, destination: a, travelMode: google.maps.TravelMode.DRIVING
       }, (result, status) => {
+        const wrap=document.getElementById("fare");
+        const priceEl=document.getElementById("prixAffiche");
+        const detEl=document.getElementById("detailsTrajet");
+
         if(status === "OK"){
           directionsRenderer.setDirections(result);
           const leg = result.routes[0].legs[0];
           const distKm = leg.distance.value / 1000;
           const duree = leg.duration.text;
-          let prix = 20 + Math.max(0, distKm - 7) * 1.6;
 
-          document.getElementById("prixAffiche").innerText = prix.toFixed(2) + " €";
-          document.getElementById("detailsTrajet").innerText = `Distance : ${distKm.toFixed(1)} km | Temps : ${duree}`;
-          document.getElementById("tarifBox").style.display = "block";
+          // 💰 Grille : base 20 € + 1,60 €/km au-delà de 7 km (modifier ici si besoin)
+          const prix = 20 + Math.max(0, distKm - 7) * 1.6;
+          showFare(prix, distKm, duree);
         } else {
-          document.getElementById("prixAffiche").innerText = "Estimation impossible";
-          document.getElementById("tarifBox").style.display = "block";
+          priceEl.textContent = "Estimation indisponible";
+          detEl.textContent = ""; wrap.classList.add("show");
         }
       });
     }
   </script>
 
-  <!-- ✅ Google Maps API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxEs2za_iEs5okAbU3H9fvJm0sRm0oG-A&callback=initMap&libraries=places" async defer></script>
+  <!-- ✅ Google Maps API (Places requis) -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxEs2za_iEs5okAbU3H9fvJm0sRm0oG-A&callback=initMap&libraries=places&loading=async" async defer></script>
 </body>
 </html>
